<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/nav_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_main"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/cv_movie_summary" />

    <Button
        android:id="@+id/btn_category"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_normal"
        android:background="@drawable/ripple"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/category"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_popular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_normal"
            android:background="@drawable/ripple_white"
            android:backgroundTint="#FFFFFF"
            android:text="@string/popular" />

        <Button
            android:id="@+id/btn_upcoming"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_normal"
            android:background="@drawable/ripple_white"
            android:backgroundTint="#FFFFFF"
            android:text="@string/upcoming" />

        <Button
            android:id="@+id/btn_toprated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_white"
            android:backgroundTint="#FFFFFF"
            android:text="@string/top_rated" />

        <Button
            android:id="@+id/btn_nowplaying"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_normal"
            android:background="@drawable/ripple_white"
            android:backgroundTint="#FFFFFF"
            android:text="@string/now_playing" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>